PuRSUE/design-time/3 - parser UP2OB/UP2OB/target/generated-sources/antlr4/UP2OBParser.java
// Generated from UP2OB.g4 by ANTLR 4.7.1

	package se.cth.pursue;

   import java.util.Set;
   import java.util.HashSet;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UP2OBParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, CHAN_DEC=38, 
		ID=39, CLOCK_ID=40, COMMA=41, SEMICOLON=42, PAR_OPEN=43, PAR_CLOSE=44, 
		POSITION_ID=45, STATE_ID=46, INT=47, ACCEPTED_CHARACTER=48, ASSIGNMENT=49, 
		SMALLER_WEAK=50, GREATER_STRONG=51, EQUALS=52, AND=53, SYSTEM_DECLARATION=54, 
		WS=55, LINE_COMMENT=56;
	public static final int
		RULE_model = 0, RULE_declaration_block = 1, RULE_machine_block = 2, RULE_location_block = 3, 
		RULE_transition_block = 4;
	public static final String[] ruleNames = {
		"model", "declaration_block", "machine_block", "location_block", "transition_block"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'<nta>'", "'automata_declaration'", "'state_updater'", "'rules'", 
		"'agents'", "'objectives'", "'</nta>'", "'<declaration>'", "'broadcast chan '", 
		"'int '", "'clock '", "'</declaration>'", "'<template>'", "'<name>'", 
		"'</name>'", "'<init ref = '", "'\"'", "'/>'", "'</template>'", "'<location id='", 
		"'<location id = '", "'>'", "'<label kind=\"invariant\">'", "'</label>'", 
		"'</location>'", "'<transition>'", "'<transition controllable=\"false\" >'", 
		"'<source ref='", "'<target ref='", "'<label kind=\"synchronisation\">'", 
		"'!'", "'?'", "'<label'", "'kind'", "'\"assignment\">'", "'\"guard\">'", 
		"'</transition>'", null, null, null, "','", "';'", "'('", "')'", null, 
		null, null, null, "'='", "'&lt;='", "'&gt;'", "'=='", "'&amp;&amp;'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "CHAN_DEC", "ID", "CLOCK_ID", "COMMA", "SEMICOLON", "PAR_OPEN", 
		"PAR_CLOSE", "POSITION_ID", "STATE_ID", "INT", "ACCEPTED_CHARACTER", "ASSIGNMENT", 
		"SMALLER_WEAK", "GREATER_STRONG", "EQUALS", "AND", "SYSTEM_DECLARATION", 
		"WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UP2OB.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UP2OBParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModelContext extends ParserRuleContext {
		public Model mod;
		public Declaration_blockContext declared;
		public Machine_blockContext mac;
		public Machine_blockContext reg;
		public Machine_blockContext agent;
		public Machine_blockContext obj;
		public TerminalNode SYSTEM_DECLARATION() { return getToken(UP2OBParser.SYSTEM_DECLARATION, 0); }
		public TerminalNode EOF() { return getToken(UP2OBParser.EOF, 0); }
		public Declaration_blockContext declaration_block() {
			return getRuleContext(Declaration_blockContext.class,0);
		}
		public List<Machine_blockContext> machine_block() {
			return getRuleContexts(Machine_blockContext.class);
		}
		public Machine_blockContext machine_block(int i) {
			return getRuleContext(Machine_blockContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).exitModel(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);

				String str = "#Model name";
				((ModelContext)_localctx).mod =  new Model(str);
			
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(10);
			match(T__0);
			setState(11);
			((ModelContext)_localctx).declared = declaration_block();

					_localctx.mod.setInitialConditions(((ModelContext)_localctx).declared.dichiarazioni);
				
			setState(13);
			match(T__1);
			setState(18);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(14);
				match(T__2);
				setState(15);
				((ModelContext)_localctx).mac = machine_block();

						_localctx.mod.addStateUpdater(((ModelContext)_localctx).mac.machine);
					
				}
			}

			setState(20);
			match(T__3);
			setState(26);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(21);
					((ModelContext)_localctx).reg = machine_block();

								_localctx.mod.addRule(((ModelContext)_localctx).reg.machine);
							
					}
					} 
				}
				setState(28);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(29);
			match(T__4);
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(30);
					((ModelContext)_localctx).agent = machine_block();

								_localctx.mod.addAgent(((ModelContext)_localctx).agent.machine);
							
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(38);
			match(T__5);
			setState(44);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(39);
					((ModelContext)_localctx).obj = machine_block();

								_localctx.mod.addObjective(((ModelContext)_localctx).obj.machine);
							
					}
					} 
				}
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(47);
			match(SYSTEM_DECLARATION);
			setState(48);
			match(T__6);
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_blockContext extends ParserRuleContext {
		public InitialConditions dichiarazioni;
		public Token name;
		public Token value;
		public List<TerminalNode> SEMICOLON() { return getTokens(UP2OBParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(UP2OBParser.SEMICOLON, i);
		}
		public List<TerminalNode> ASSIGNMENT() { return getTokens(UP2OBParser.ASSIGNMENT); }
		public TerminalNode ASSIGNMENT(int i) {
			return getToken(UP2OBParser.ASSIGNMENT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UP2OBParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UP2OBParser.COMMA, i);
		}
		public List<TerminalNode> CLOCK_ID() { return getTokens(UP2OBParser.CLOCK_ID); }
		public TerminalNode CLOCK_ID(int i) {
			return getToken(UP2OBParser.CLOCK_ID, i);
		}
		public List<TerminalNode> ID() { return getTokens(UP2OBParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(UP2OBParser.ID, i);
		}
		public List<TerminalNode> CHAN_DEC() { return getTokens(UP2OBParser.CHAN_DEC); }
		public TerminalNode CHAN_DEC(int i) {
			return getToken(UP2OBParser.CHAN_DEC, i);
		}
		public List<TerminalNode> POSITION_ID() { return getTokens(UP2OBParser.POSITION_ID); }
		public TerminalNode POSITION_ID(int i) {
			return getToken(UP2OBParser.POSITION_ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(UP2OBParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(UP2OBParser.INT, i);
		}
		public List<TerminalNode> STATE_ID() { return getTokens(UP2OBParser.STATE_ID); }
		public TerminalNode STATE_ID(int i) {
			return getToken(UP2OBParser.STATE_ID, i);
		}
		public Declaration_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).enterDeclaration_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).exitDeclaration_block(this);
		}
	}

	public final Declaration_blockContext declaration_block() throws RecognitionException {
		Declaration_blockContext _localctx = new Declaration_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration_block);

				((Declaration_blockContext)_localctx).dichiarazioni =  new InitialConditions();

			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__7);


				
			setState(53);
			match(T__8);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAN_DEC) | (1L << ID) | (1L << COMMA))) != 0)) {
				{
				{
				setState(54);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAN_DEC) | (1L << ID) | (1L << COMMA))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(SEMICOLON);
			setState(61);
			match(T__8);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAN_DEC) | (1L << ID) | (1L << COMMA))) != 0)) {
				{
				{
				setState(62);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAN_DEC) | (1L << ID) | (1L << COMMA))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(SEMICOLON);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(69);
				match(T__9);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA || _la==POSITION_ID) {
					{
					setState(74);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case POSITION_ID:
						{
						setState(70);
						match(POSITION_ID);
						setState(71);
						match(ASSIGNMENT);
						setState(72);
						match(INT);
						}
						break;
					case COMMA:
						{
						setState(73);
						match(COMMA);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(79);
				match(SEMICOLON);
				}
			}

			setState(82);
			match(T__10);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLOCK_ID || _la==COMMA) {
				{
				{
				setState(83);
				_la = _input.LA(1);
				if ( !(_la==CLOCK_ID || _la==COMMA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(SEMICOLON);
			setState(90);
			match(T__9);
			setState(96); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(96);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case POSITION_ID:
					{
					setState(91);
					((Declaration_blockContext)_localctx).name = match(POSITION_ID);
					setState(92);
					match(ASSIGNMENT);
					setState(93);
					((Declaration_blockContext)_localctx).value = match(INT);


							_localctx.dichiarazioni.addInitialPosition((((Declaration_blockContext)_localctx).name!=null?((Declaration_blockContext)_localctx).name.getText():null), (((Declaration_blockContext)_localctx).value!=null?((Declaration_blockContext)_localctx).value.getText():null));

						
					}
					break;
				case COMMA:
					{
					setState(95);
					match(COMMA);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMA || _la==POSITION_ID );
			setState(100);
			match(SEMICOLON);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(101);
				match(T__9);
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA || _la==STATE_ID) {
					{
					setState(107);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case STATE_ID:
						{
						setState(102);
						((Declaration_blockContext)_localctx).name = match(STATE_ID);
						setState(103);
						match(ASSIGNMENT);
						setState(104);
						((Declaration_blockContext)_localctx).value = match(INT);

								_localctx.dichiarazioni.addInitialState((((Declaration_blockContext)_localctx).name!=null?((Declaration_blockContext)_localctx).name.getText():null), (((Declaration_blockContext)_localctx).value!=null?((Declaration_blockContext)_localctx).value.getText():null));
								
						}
						break;
					case COMMA:
						{
						setState(106);
						match(COMMA);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(112);
				match(SEMICOLON);
				}
			}

			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(115);
				match(T__10);
				setState(116);
				match(CLOCK_ID);
				setState(117);
				match(SEMICOLON);
				}
				break;
			}
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(120);
				match(T__10);
				setState(121);
				match(CLOCK_ID);
				setState(122);
				match(SEMICOLON);
				}
			}

			setState(125);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Machine_blockContext extends ParserRuleContext {
		public Machine machine;
		public Token nome;
		public Location_blockContext loc;
		public Token init;
		public Transition_blockContext tran;
		public List<TerminalNode> ID() { return getTokens(UP2OBParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(UP2OBParser.ID, i);
		}
		public List<Location_blockContext> location_block() {
			return getRuleContexts(Location_blockContext.class);
		}
		public Location_blockContext location_block(int i) {
			return getRuleContext(Location_blockContext.class,i);
		}
		public List<Transition_blockContext> transition_block() {
			return getRuleContexts(Transition_blockContext.class);
		}
		public Transition_blockContext transition_block(int i) {
			return getRuleContext(Transition_blockContext.class,i);
		}
		public Machine_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_machine_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).enterMachine_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).exitMachine_block(this);
		}
	}

	public final Machine_blockContext machine_block() throws RecognitionException {
		Machine_blockContext _localctx = new Machine_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_machine_block);

				((Machine_blockContext)_localctx).machine =  new Machine();
			
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__12);
			setState(128);
			match(T__13);
			setState(129);
			((Machine_blockContext)_localctx).nome = match(ID);
			setState(130);
			match(T__14);

					_localctx.machine.setName((((Machine_blockContext)_localctx).nome!=null?((Machine_blockContext)_localctx).nome.getText():null));
					
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				((Machine_blockContext)_localctx).loc = location_block();

							_localctx.machine.addLocation(((Machine_blockContext)_localctx).loc.loc);
							
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__19 || _la==T__20 );
			setState(139);
			match(T__15);
			setState(140);
			match(T__16);
			setState(141);
			((Machine_blockContext)_localctx).init = match(ID);
			setState(142);
			match(T__16);
			setState(143);
			match(T__17);

						_localctx.machine.setInitialLocation((((Machine_blockContext)_localctx).init!=null?((Machine_blockContext)_localctx).init.getText():null));
						
			setState(150);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(145);
					((Machine_blockContext)_localctx).tran = transition_block();

								_localctx.machine.addTransition(((Machine_blockContext)_localctx).tran.tran);
								
					}
					} 
				}
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			}
			setState(153);
			match(T__18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Location_blockContext extends ParserRuleContext {
		public String loc;
		public Token loc_id;
		public List<TerminalNode> ID() { return getTokens(UP2OBParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(UP2OBParser.ID, i);
		}
		public TerminalNode CLOCK_ID() { return getToken(UP2OBParser.CLOCK_ID, 0); }
		public TerminalNode SMALLER_WEAK() { return getToken(UP2OBParser.SMALLER_WEAK, 0); }
		public TerminalNode INT() { return getToken(UP2OBParser.INT, 0); }
		public Location_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).enterLocation_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).exitLocation_block(this);
		}
	}

	public final Location_blockContext location_block() throws RecognitionException {
		Location_blockContext _localctx = new Location_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_location_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_la = _input.LA(1);
			if ( !(_la==T__19 || _la==T__20) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(156);
			match(T__16);
			setState(157);
			((Location_blockContext)_localctx).loc_id = match(ID);
			setState(158);
			match(T__16);
			setState(159);
			match(T__21);

					((Location_blockContext)_localctx).loc =  (((Location_blockContext)_localctx).loc_id!=null?((Location_blockContext)_localctx).loc_id.getText():null);
					
				
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(161);
				match(T__13);
				setState(162);
				match(ID);
				setState(163);
				match(T__14);
				}
			}

			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(166);
				match(T__22);
				setState(167);
				match(CLOCK_ID);
				setState(168);
				match(SMALLER_WEAK);
				setState(169);
				match(INT);
				setState(170);
				match(T__23);
				}
			}

			setState(173);
			match(T__24);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Transition_blockContext extends ParserRuleContext {
		public Transition tran;
		public Token source;
		public Token target;
		public Token synch;
		public Token value;
		public Token state_name;
		public List<TerminalNode> ID() { return getTokens(UP2OBParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(UP2OBParser.ID, i);
		}
		public List<TerminalNode> ASSIGNMENT() { return getTokens(UP2OBParser.ASSIGNMENT); }
		public TerminalNode ASSIGNMENT(int i) {
			return getToken(UP2OBParser.ASSIGNMENT, i);
		}
		public List<TerminalNode> CLOCK_ID() { return getTokens(UP2OBParser.CLOCK_ID); }
		public TerminalNode CLOCK_ID(int i) {
			return getToken(UP2OBParser.CLOCK_ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(UP2OBParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(UP2OBParser.INT, i);
		}
		public List<TerminalNode> POSITION_ID() { return getTokens(UP2OBParser.POSITION_ID); }
		public TerminalNode POSITION_ID(int i) {
			return getToken(UP2OBParser.POSITION_ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UP2OBParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UP2OBParser.COMMA, i);
		}
		public List<TerminalNode> GREATER_STRONG() { return getTokens(UP2OBParser.GREATER_STRONG); }
		public TerminalNode GREATER_STRONG(int i) {
			return getToken(UP2OBParser.GREATER_STRONG, i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(UP2OBParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(UP2OBParser.EQUALS, i);
		}
		public List<TerminalNode> STATE_ID() { return getTokens(UP2OBParser.STATE_ID); }
		public TerminalNode STATE_ID(int i) {
			return getToken(UP2OBParser.STATE_ID, i);
		}
		public List<TerminalNode> AND() { return getTokens(UP2OBParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(UP2OBParser.AND, i);
		}
		public List<TerminalNode> PAR_OPEN() { return getTokens(UP2OBParser.PAR_OPEN); }
		public TerminalNode PAR_OPEN(int i) {
			return getToken(UP2OBParser.PAR_OPEN, i);
		}
		public List<TerminalNode> PAR_CLOSE() { return getTokens(UP2OBParser.PAR_CLOSE); }
		public TerminalNode PAR_CLOSE(int i) {
			return getToken(UP2OBParser.PAR_CLOSE, i);
		}
		public Transition_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transition_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).enterTransition_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2OBListener ) ((UP2OBListener)listener).exitTransition_block(this);
		}
	}

	public final Transition_blockContext transition_block() throws RecognitionException {
		Transition_blockContext _localctx = new Transition_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_transition_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_la = _input.LA(1);
			if ( !(_la==T__25 || _la==T__26) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(176);
			match(T__27);
			setState(177);
			match(T__16);
			setState(178);
			((Transition_blockContext)_localctx).source = match(ID);
			setState(179);
			match(T__16);
			setState(180);
			match(T__17);
			setState(181);
			match(T__28);
			setState(182);
			match(T__16);
			setState(183);
			((Transition_blockContext)_localctx).target = match(ID);
			setState(184);
			match(T__16);
			setState(185);
			match(T__17);
